discussion/kv_engine/183119/183119_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54666: Introduce the change_streams DCP_CONTROL key

- DCP Producer disables CDC by default
- DCP Producer accepts the new key and enables CDC accordingly on the
  connection. Generic DCP Clients covered by that.
- DCP Consumer tries to enable CDC by default. 7.2.0 Consumers always
  send the new control key to the Producer for enabling CDC on replica
  DCP connections.
- DCP Consumer is resilient to pre-7.2.0 nodes. In case of non-success
  at DCP_CONTROL (as returned by legacy Producers that don't know about
  change_streams) CDC is set disabled at Consumer.

Notes:
- The CDC setup is a blocking step. The Consumer won't start operating
  until the setup is complete.
- Consumer needs to know about CDC enabled/disabled on the connection
  for enforing the proper validation on snapshots received.

Change-Id: Ief90aec0ee7beaa1dea4db2e110cf56eff47273e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-11-25 13:46:04.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-25 13:46:15.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/326437/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-25 13:53:16.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/736/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/736/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/834/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/834/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/578/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/578/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/597/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/597/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/597/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/597/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/587/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/587/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/570/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/570/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/587/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/587/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/578/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.cc:14:12: error: no type named "string" in namespace "std" [clang-diagnostic-error]
const std::string DcpControlKeys::ChangeStreams = "change_stream";
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.h:161:23: error: no type named "string" in namespace "std" [clang-diagnostic-error]
    static const std::string ChangeStreams;
                      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/578/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.cc:14:12:
error: no type named "string" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/578/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21414/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
